chore: update title of example page

--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React</title>
+  <title>InstantSearch DevTools ⚡️</title>
   <link rel="stylesheet" href="https://unpkg.com/react-instantsearch-theme-algolia@4.0.0/style.min.css">
 </head>
 <body>
